[gd_scene load_steps=11 format=4 uid="uid://dhf6m6xbet45b"]

[ext_resource type="Script" uid="uid://dwlbvnycxhvdf" path="res://Scenes/game.gd" id="1_wowpa"]
[ext_resource type="Texture2D" uid="uid://dbgqqj3tt6oj8" path="res://Sprites/wip tilesheet-sheet.png" id="2_wowpa"]
[ext_resource type="PackedScene" uid="uid://c7n1qh4gbun3p" path="res://Scenes/Wheat.tscn" id="4_3dryh"]
[ext_resource type="PackedScene" uid="uid://dcsn7v14te32t" path="res://Scenes/Grow Button.tscn" id="4_wowpa"]
[ext_resource type="PackedScene" uid="uid://dltidsh5ps1ma" path="res://Scenes/Harvest Button.tscn" id="5_wowpa"]
[ext_resource type="FontFile" uid="uid://dmxgarimbhhn2" path="res://Qager-zrlmw.ttf" id="6_i6g32"]
[ext_resource type="Script" uid="uid://bwpuvnimjosh6" path="res://Scenes/wps_label.gd" id="7_1l0tm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i6g32"]
texture = ExtResource("2_wowpa")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0

[sub_resource type="TileSet" id="TileSet_1l0tm"]
sources/0 = SubResource("TileSetAtlasSource_i6g32")

[sub_resource type="Theme" id="Theme_i6g32"]

[node name="game" type="Node2D"]
script = ExtResource("1_wowpa")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD4//z/AAAEAAAAAAD4//7/AAAEAAAAAAD4//3/AAAEAAAAAAD5//z/AAAEAAAAAAD6//z/AAAEAAAAAAD7//z/AAALAAAAAAD5//3/AAAEAAAAAAD6//3/AAAEAAAAAAD7//3/AAALAAAAAAD8//3/AAAEAAAAAAD5//7/AAAEAAAAAAD6//7/AAAEAAAAAAD7//7/AAALAAAAAAD8//7/AAAEAAAAAAD8//z/AAAEAAAAAAD3//z/AAALAAAAAAD3//3/AAALAAAAAAD3//7/AAALAAAAAAD3////AAALAAAAAAD3/wAAAAABAAAAAAD3/wEAAAABAAAAAAD3/wIAAAABAAAAAAD3/wMAAAACAAAAAAD6//v/AAALAAAAAAD7//v/AAALAAAAAAD8//v/AAADAAAAAAD9//v/AAADAAAAAAD+//v/AAADAAAAAAD///v/AAADAAAAAAAAAPv/AAADAAAAAAABAPv/AAADAAAAAAACAPv/AAAKAAAAAAADAPv/AAADAAAAAAAEAPv/AAADAAAAAAAFAPv/AAADAAAAAAAGAPv/AAADAAAAAAAHAPv/AAADAAAAAAAIAPv/AAAGAAAAAAAIAPz/AAAKAAAAAAAIAP3/AAAHAAAAAAAIAP7/AAAHAAAAAAAIAAAAAAAHAAAAAAAIAAEAAAAHAAAAAAAIAAIAAAAHAAAAAAD4////AAALAAAAAAD4/wAAAAAEAAAAAAD4/wEAAAAEAAAAAAD4/wIAAAAEAAAAAAD4/wMAAAAFAAAAAAD5////AAALAAAAAAD5/wAAAAAEAAAAAAD5/wEAAAAEAAAAAAD5/wIAAAAEAAAAAAD5/wMAAAAFAAAAAAD6////AAALAAAAAAD6/wAAAAAEAAAAAAD6/wEAAAAEAAAAAAD6/wIAAAAEAAAAAAD6/wMAAAAFAAAAAAD7////AAALAAAAAAD7/wAAAAAEAAAAAAD7/wEAAAAEAAAAAAD7/wIAAAAEAAAAAAD7/wMAAAAFAAAAAAD8////AAAEAAAAAAD8/wAAAAAEAAAAAAD8/wEAAAAEAAAAAAD8/wIAAAAEAAAAAAD8/wMAAAAFAAAAAAD9////AAAEAAAAAAD9/wAAAAAEAAAAAAD9/wEAAAAEAAAAAAD9/wIAAAAEAAAAAAD9/wMAAAAFAAAAAAD+////AAAEAAAAAAD+/wAAAAAEAAAAAAD+/wEAAAAEAAAAAAD+/wIAAAAEAAAAAAD+/wMAAAAFAAAAAAD/////AAAEAAAAAAD//wAAAAAEAAAAAAD//wEAAAAEAAAAAAD//wIAAAAEAAAAAAD//wMAAAAFAAAAAAAAAP//AAAEAAAAAAAAAAAAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAFAAAAAAABAP//AAAEAAAAAAABAAAAAAAEAAAAAAABAAEAAAAEAAAAAAABAAIAAAAEAAAAAAABAAMAAAAFAAAAAAACAP//AAAEAAAAAAACAAAAAAAEAAAAAAACAAEAAAAEAAAAAAACAAIAAAAEAAAAAAACAAMAAAAFAAAAAAADAP//AAAEAAAAAAADAAEAAAAEAAAAAAADAAIAAAAEAAAAAAAEAAEAAAAEAAAAAAAEAAIAAAAEAAAAAAAFAAAAAAAEAAAAAAAFAAEAAAAEAAAAAAAFAAIAAAAEAAAAAAAGAP//AAAEAAAAAAAGAAAAAAAEAAAAAAAGAAEAAAAEAAAAAAAGAAIAAAAEAAAAAAAHAP//AAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAD9//z/AAAEAAAAAAD9//3/AAAEAAAAAAD9//7/AAAEAAAAAAD+//z/AAAEAAAAAAD+//3/AAAEAAAAAAD+//7/AAAEAAAAAAD///z/AAAEAAAAAAD///3/AAAEAAAAAAD///7/AAAEAAAAAAAAAPz/AAAEAAAAAAAAAP3/AAAEAAAAAAAAAP7/AAAEAAAAAAABAPz/AAAEAAAAAAABAP3/AAAEAAAAAAABAP7/AAAEAAAAAAACAPz/AAAKAAAAAAACAP3/AAAEAAAAAAACAP7/AAAEAAAAAAADAPz/AAAKAAAAAAADAP3/AAAEAAAAAAADAP7/AAAEAAAAAAAEAPz/AAAKAAAAAAAEAP3/AAAEAAAAAAAEAP7/AAAEAAAAAAAFAPz/AAAKAAAAAAAGAPz/AAAKAAAAAAAGAP3/AAAEAAAAAAAGAP7/AAAEAAAAAAAHAPz/AAAKAAAAAAAHAP3/AAAEAAAAAAAHAP7/AAAEAAAAAAADAAAAAAAEAAAAAAAEAP//AAAEAAAAAAAEAAAAAAAEAAAAAAAFAP3/AAAEAAAAAAAFAP7/AAAEAAAAAAAFAP//AAAEAAAAAAD3//v/AAALAAAAAAAIAAMAAAAIAAAAAAAIAP//AAAHAAAAAAADAAMAAAAFAAAAAAAEAAMAAAAFAAAAAAAFAAMAAAAFAAAAAAAGAAMAAAAFAAAAAAAHAAMAAAAFAAAAAAD4//v/AAALAAAAAAD5//v/AAALAAAAAAA=")
tile_set = SubResource("TileSet_1l0tm")

[node name="Wheat" parent="." instance=ExtResource("4_3dryh")]
position = Vector2(-105, -39)

[node name="Grow Button" parent="." instance=ExtResource("4_wowpa")]
offset_left = -128.0
offset_top = -15.0
offset_right = -96.0
offset_bottom = 1.0

[node name="HarvestButton" parent="." instance=ExtResource("5_wowpa")]
offset_left = -96.0
offset_top = -15.0
offset_right = -80.0
offset_bottom = 1.0

[node name="WheatLabel" type="Label" parent="."]
offset_left = 50.0
offset_top = -76.00001
offset_right = 189.0
offset_bottom = -58.000008
scale = Vector2(0.59740424, 0.5713748)
theme_override_fonts/font = ExtResource("6_i6g32")
text = "Wheat: 1,000,000"

[node name="MultLabel" type="Label" parent="."]
offset_left = 58.000004
offset_top = 38.999992
offset_right = 197.0
offset_bottom = 56.999992
scale = Vector2(0.59740424, 0.5713748)
theme_override_fonts/font = ExtResource("6_i6g32")
text = "Mult:"

[node name="BonusLabel" type="Label" parent="."]
offset_left = 58.000004
offset_top = 28.999992
offset_right = 197.0
offset_bottom = 46.999992
scale = Vector2(0.59740424, 0.5713748)
theme_override_fonts/font = ExtResource("6_i6g32")
text = "Bonus:"

[node name="WpsLabel" type="Label" parent="."]
offset_left = 58.000004
offset_top = 49.999992
offset_right = 197.0
offset_bottom = 67.99999
scale = Vector2(0.59740424, 0.5713748)
theme_override_fonts/font = ExtResource("6_i6g32")
text = "W/Sec:"
script = ExtResource("7_1l0tm")

[node name="Mult Test Button" type="Button" parent="."]
offset_left = -59.0
offset_top = -61.999996
offset_right = 47.0
offset_bottom = -37.999996
scale = Vector2(0.5182675, 0.45657703)
theme = SubResource("Theme_i6g32")
theme_override_fonts/font = ExtResource("6_i6g32")
theme_override_font_sizes/font_size = 16
text = "mult test +0.1"

[node name="Bonus Test Button" type="Button" parent="."]
offset_left = -59.000004
offset_top = -49.0
offset_right = 136.0
offset_bottom = -25.0
scale = Vector2(0.2926325, 0.4723696)
theme_override_fonts/font = ExtResource("6_i6g32")
text = "bonus test button +1"

[node name="WPS Test Button" type="Button" parent="."]
offset_left = -59.000004
offset_top = -36.0
offset_right = 128.94905
offset_bottom = -12.0
scale = Vector2(0.2926325, 0.4723696)
theme_override_fonts/font = ExtResource("6_i6g32")
text = "w/sec test button + 1"

[connection signal="harvest" from="Wheat" to="." method="_on_wheat_harvest"]
[connection signal="pressed" from="Grow Button" to="Wheat" method="_on_grow_button_pressed"]
[connection signal="pressed" from="HarvestButton" to="." method="_on_harvest_button_pressed"]
[connection signal="pressed" from="HarvestButton" to="Wheat" method="_on_harvest_button_pressed"]
[connection signal="pressed" from="Mult Test Button" to="." method="_on_mult_test_button_pressed"]
[connection signal="button_down" from="Bonus Test Button" to="." method="_on_bonus_test_button_button_down"]
[connection signal="button_down" from="WPS Test Button" to="." method="_on_bonus_test_button_button_down"]
